--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "dev": "vite",
     "acceptance:zoom-state": "tsx examples/acceptance/zoom-state.ts",
+    "acceptance:lttb-sample": "tsx examples/acceptance/lttb-sample.ts",
     "build": "tsc && vite build",
     "prepublishOnly": "npm run build"
   },
