Add acceptance test for easing functionality in examples
Included a new acceptance test script for the easing feature in the examples directory. This addition enhances the testing coverage for animation configurations, ensuring that the easing functionality is properly validated within the application. This update supports ongoing improvements in animation handling and user experience.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "acceptance:lttb-sample": "tsx examples/acceptance/lttb-sample.ts",
     "acceptance:auto-scroll-policy": "tsx examples/acceptance/auto-scroll-policy.ts",
     "acceptance:data-store-append": "tsx examples/acceptance/data-store-append.ts",
+    "acceptance:easing": "tsx examples/acceptance/easing.ts",
     "build": "tsc && vite build",
     "prepublishOnly": "npm run build"
   },
