--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "dev": "vite",
+    "acceptance:animation-controller": "tsx examples/acceptance/animation-controller.ts",
     "acceptance:sampling-config": "tsx examples/acceptance/sampling-config.ts",
     "acceptance:zoom-state": "tsx examples/acceptance/zoom-state.ts",
     "acceptance:lttb-sample": "tsx examples/acceptance/lttb-sample.ts",
